Done: load items using fetch api and setup template using react-bootstrap and -fontawesome. Todo: implement mark and delete funcs

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <title>React App</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
   </head>
   <body>
     <noscript>
@@ -15,5 +17,7 @@
     <div id="work_list_wrapper">
 
     </div>
+    <!--fontawsome CDN-->
+    <script src="https://use.fontawesome.com/e3ac253cf2.js"></script>
   </body>
 </html>
