--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,12 @@
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/img/cmyk.png">
-    <title>React App</title>
+    <title>React Todo List</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
   </head>
   <body>
     <noscript>
-      You need to enable JavaScript to run this app.
     </noscript>
     <div id="work_list_wrapper">
 
